fixed blob overflow

--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,10 @@
     height: 40%;
     width: 40%;
     border-radius: 50%;
-    background: rgba(237, 0, 0, 1);
+    background: rgba(237, 0, 0, 0.7);
     filter: blur(100px);
-    /* top: -10;
-    left: -20; */
+    top: -10rem;
+    left: 15rem;
     z-index: -99;
     animation: move 7s infinite alternate;
     transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
@@ -34,10 +34,10 @@
     height: 33%;
     width: 33%;
     border-radius: 50%;
-    background: rgba(6, 2, 209, 1);
+    background: rgba(6, 2, 209, 0.7);
     filter: blur(100px);
-    top: -10px;
-    right: 20px;
+    top: -1rem;
+    right: -15rem;
     z-index: -99;
     animation: movee 5s infinite alternate;
     transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
